Fix grid gap

--- a/src/components/YearEntry.css
+++ b/src/components/YearEntry.css
@@ -63,7 +63,7 @@ button.year-title-button {
   height: 100%;
   grid-template-columns: repeat(auto-fill, 325px);
   grid-auto-rows: 1fr;
-  gap: 5%;
+  gap: 2vw;
   justify-content: center;
   padding-bottom: 20px;
   margin-bottom: 20px;
